<resources>
    <string name="app_name">Aeroplane C-13</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">My Profile</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_Ticket">Ticket</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="date">Date</string>

    <string name="ArrivalSpinner">SpinnerArrival</string>
    <string-array name="Arrival">
        <item>Surabaya (SBy)</item>
        <item>Jakarta (JKt)</item>
        <item>Bandung (BDg)</item>
        <item>Papua (PPu)</item>
    </string-array>

    <string-array name="Departure">
        <item>Surabaya (SBy)</item>
        <item>Jakarta (JKt)</item>
        <item>Bandung (BDg)</item>
        <item>Papua (PPu)</item>
    </string-array>
</resources>