<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.profile.ProfileFragment"
    tools:ignore="HardcodedText, ContentDescription, UseCompoundDrawables">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.FPANDC13.title2"
                    android:textSize="25sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    app:cardCornerRadius="200dp">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:src="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/upload_image"
                    android:layout_width="61dp"
                    android:layout_height="69dp"
                    android:layout_marginStart="238dp"
                    android:layout_marginTop="-35dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_add_foreground"
                    android:visibility="visible" />

            </LinearLayout>


            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewProfile"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:outlineProvider="none"
                app:cardBackgroundColor="@color/cardColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/TextAppearance.FPANDC13.detail.text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/profile" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_supervised_user_circle_24" />

                        <TextView
                            android:id="@+id/txtFullname"
                            style="@style/TextAppearance.FPANDC13.detail.text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_email_24" />

                        <TextView
                            android:id="@+id/txtEmail"
                            style="@style/TextAppearance.FPANDC13.detail.text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/email" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_today_24" />

                        <TextView
                            android:id="@+id/txtBirthday"
                            style="@style/TextAppearance.FPANDC13.detail.text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/birthday" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_phone_24" />

                        <TextView
                            android:id="@+id/txtNomor"
                            style="@style/TextAppearance.FPANDC13.detail.text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/phone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnEdit"
                            style="@style/Widget.FPANDC13.Button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/edit"
                            android:textColor="@color/black"
                            app:backgroundTint="#D2EDF0"
                            app:cornerRadius="20dp"
                            app:strokeColor="@color/black"
                            app:strokeWidth="1dp" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLogout"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="64dp"
                android:outlineProvider="none"
                app:cardBackgroundColor="#83000000"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtLogout"
                        style="@style/TextAppearance.FPANDC13.detail.text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/logout" />

                    <ImageView
                        android:id="@+id/imgLogout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="#00000000"
                        android:src="@drawable/ic_baseline_login_24" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#00000000"
        android:src="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>